DevTools: serve MimeType as ContentType for debug_devtools

- Adds ShouldServeMimeTypeAsContentTypeHeader() on URLRequestFileJob
- With debug_devtools, our interceptor now serves files with
  ContentType header, allowing DevTools to importScripts() on
  locally-served bundled files.
- Without this CL, strict MIME-type checks prevent importScripts()
  in FormatterWorker, required for pretty-print and autocomplete.

Bug: 882013
Change-Id: Ib61284cfccd430dd9a4ddae769a416147c504e05
Reviewed-on: https://chromium-review.googlesource.com/1214365
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Erik Luo <luoe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589944}
Former-commit-id: 75f9ed0695b3c3c0eac4e014f485264c1e4d8c5e