net/url_request/url_request_file_job.h
@@ -46,6 +46,10 @@ class NET_EXPORT URLRequestFileJob : public URLRequestJob {
                           bool* insecure_scheme_was_upgraded) override;
   bool GetMimeType(std::string* mime_type) const override;
   void SetExtraRequestHeaders(const HttpRequestHeaders& headers) override;
+  void ShouldServeMimeTypeAsContentTypeHeader() {
+    serve_mime_type_as_content_type_ = true;
+  };
+  void GetResponseInfo(HttpResponseInfo* info) override;
 
   // An interface for subclasses who wish to monitor read operations.
   //
@@ -124,6 +128,7 @@ class NET_EXPORT URLRequestFileJob : public URLRequestJob {
   std::vector<HttpByteRange> byte_ranges_;
   HttpByteRange byte_range_;
   int64_t remaining_bytes_;
+  bool serve_mime_type_as_content_type_ = false;
 
   Error range_parse_result_;
 
